fixed about me page and project width, spacing and layouts

--- a/css/habbotProject.css
+++ b/css/habbotProject.css
@@ -77,12 +77,13 @@ body {
   justify-content: center;
   align-items: center;
   width: 80vw;
-  max-width: 80vw;
+  max-width: 1200px;
 }
 
 .heroPanel {
   padding: 12px;
-  width: 80vw;
+  width: 100%;
+  
   background-color: #fffaf6;
   border-radius: 24px;
   display: flex;
